# Novel-Scraper

./: main.py  pyproject.toml
novels/: 十日终焉_1361-1490.txt
